fixed issue #2 + removed icon on mobile

--- a/FrontEnd/src/app/shared/layout/header.component.css
+++ b/FrontEnd/src/app/shared/layout/header.component.css
@@ -3,3 +3,7 @@
   margin-bottom: 0.25rem;
   margin-right: 1rem;
 }
+
+.btn {
+  width: 100%;
+}
